v0.09
    Add case when content of the line is shown on a separate line

v0.08 2009.12.16
    Added more tests.
    Fixing some tests.
    set_breakpoint now returns true/false
    remove_breakpoint added
    list_break_watch_action added

v0.07 2009.12.15
    Added more test.

v0.06 2009.12.14
    Prompt is now the first return paramter
    Added more tests
    Added more documentation
    
v0.05 2009.12.13
    Try to eliminate infinite loop
    Try to make sure tests are not hung by calling quit at the end of each
    Put the STDOUT and STDERR files in temp directory
    Use Module::Install instead of Module::Build


v0.04 2008.09.16
    Add more methods
    Add more tests
    Rename to Debug::Client
    Remove the global $response variable and let users fetch the buffer using $dbg->buffer

v0.03 2008.09.13
    Add debug output for tests to better understand test failures.
    More tests

v0.02 2008.09.13
    Replace step by step_in
    Add methods step_out, step_over, get_value
    Let those method return detailed data in LIST context


v0.01 2008.09.13

    Initial release